--- a/views/admin/includes/side-bar.ejs
+++ b/views/admin/includes/side-bar.ejs
@@ -1,7 +1,7 @@
 <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
     <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
         <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-            <span class="fs-5 d-none d-sm-inline">smart space</span>
+            <span class="fs-5 d-none d-sm-inline">wood</span>
         </a>
         <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
             <li class="nav-item">
@@ -24,11 +24,11 @@
                     <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">projects</span>
                 </a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link align-middle px-0" onclick="showElement('faq')">
                     <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Frequently Asked Question</span>
                 </a>
-            </li>
+            </li> -->
         </ul>
         <hr>
         <div class="dropdown pb-4">
