--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -11,7 +11,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <link rel="stylesheet" href="/admin/css/style.css">
-    <title>smart space</title>
+    <title>wood</title>
 </head>
 
 <body onload="">
