--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -24,6 +24,7 @@
                             <%- include('includes/about') %>
                                 <%- include('includes/service') %>
                                     <%- include('includes/project') %>
+                                        <%- include('includes/parten') %>
                     </div>
                 </div>
         </div>
