--- a/views/admin/includes/parten.ejs
+++ b/views/admin/includes/parten.ejs
@@ -11,11 +11,11 @@
                 </div>
                 <div class="mb-3">
                     <label for="txt">caption</label>
-                    <textarea name="captionEn" class="form-control" cols="30" rows="6"></textarea>
+                    <textarea name="captionEn" class="form-control" cols="30" rows="3"></textarea>
                 </div>
                 <div class="mb-3">
                     <label for="txt">الوصف</label>
-                    <textarea name="captionAr" class="form-control" cols="30" rows="6"></textarea>
+                    <textarea name="captionAr" class="form-control" cols="30" rows="3"></textarea>
                 </div>
                 <div class="mb-3">
                     <input type="file" name="img" class="form-control">
@@ -37,7 +37,7 @@
     </div>
 </div>
 <script>
-    const removeServ = (id) => {
+    const removeParten = (id) => {
         if (confirm('warn! you will dellete this?')) {
             fetch(`/admin/remove-parten/${id}`)
                 .then(res => {
