--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -295,119 +295,71 @@
         </div>
         <!-- Projects End -->
 
-
-        <!-- Quote Start -->
-        <div class="container-fluid bg-light overflow-hidden my-5 px-lg-0">
-            <div class="container quote px-lg-0">
-                <div class="row g-0 mx-lg-0">
-                    <div class="col-lg-6 ps-lg-0" style="min-height: 400px; padding-top: 40px;">
-                        <div class="position-relative h-100">
-                            <div class="mapouter">
-                                <div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas"
-                                        src="https://maps.google.com/maps?q=21%C2%B029'35.0%22N%2039%C2%B047'25.2%22E&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                                        frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
-                                        href="https://123movies-to.org"></a><br>
-                                    <style>
-                                        .mapouter {
-                                            position: relative;
-                                            text-align: right;
-                                            height: 100%;
-                                            width: 100%;
-                                        }
-                                    </style><a href="https://www.embedgooglemap.net">how to add a google map to
-                                        wordpress</a>
-                                    <style>
-                                        .gmap_canvas {
-                                            overflow: hidden;
-                                            background: none !important;
-                                            height: 500px;
-                                            width: 600px;
-                                        }
-                                    </style>
+        <%- include('includes/testo') %>
+            <!-- Quote Start -->
+            <div class="container-fluid bg-light overflow-hidden my-5 px-lg-0">
+                <div class="container quote px-lg-0">
+                    <div class="row g-0 mx-lg-0">
+                        <div class="col-lg-6 ps-lg-0" style="min-height: 400px; padding-top: 40px;">
+                            <div class="position-relative h-100">
+                                <div class="mapouter">
+                                    <div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas"
+                                            src="https://maps.google.com/maps?q=21%C2%B029'35.0%22N%2039%C2%B047'25.2%22E&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                                            href="https://123movies-to.org"></a><br>
+                                        <style>
+                                            .mapouter {
+                                                position: relative;
+                                                text-align: right;
+                                                height: 100%;
+                                                width: 100%;
+                                            }
+                                        </style><a href="https://www.embedgooglemap.net">how to add a google map to
+                                            wordpress</a>
+                                        <style>
+                                            .gmap_canvas {
+                                                overflow: hidden;
+                                                background: none !important;
+                                                height: 500px;
+                                                width: 600px;
+                                            }
+                                        </style>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-lg-6 quote-text py-5 wow fadeIn" data-wow-delay="0.5s">
-                        <div class="p-lg-5 pe-lg-0">
-                            <div class="section-title text-start">
-                                <h1 class="display-5 mb-4">Contact Us</h1>
-                            </div>
-                        </div>
-                        <form>
-                            <div class="row g-3">
-                                <div class="col-6 col-sm-6">
-                                    <input type="text" class="form-control border-0" placeholder="Your Name"
-                                        style="height: 55px;">
-                                </div>
-                                <div class="col-6 col-sm-6">
-                                    <input type="email" class="form-control border-0" placeholder="Your Email"
-                                        style="height: 55px;">
-                                </div>
-                                <div class="col-md-12 col-sm-6">
-                                    <input type="text" class="form-control border-0" placeholder="subject"
-                                        style="height: 55px;">
-                                </div>
-                                <div class="col-12">
-                                    <textarea class="form-control border-0" rows="5" placeholder="message"></textarea>
-                                </div>
-                                <div class="col-12">
-                                    <button class="btn btn-primary w-100 py-3" type="submit">Submit</button>
+                        <div class="col-lg-6 quote-text py-5 wow fadeIn" data-wow-delay="0.5s">
+                            <div class="p-lg-5 pe-lg-0">
+                                <div class="section-title text-start">
+                                    <h1 class="display-5 mb-4">Contact Us</h1>
                                 </div>
                             </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Quote End -->
-        <!-- Testimonial Start -->
-        <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
-            <div class="container">
-                <div class="section-title text-center">
-                    <h1 class="display-5 mb-5">Our Partners</h1>
-                </div>
-                <div class="owl-carousel testimonial-carousel">
-                    <div class="testimonial-item text-center">
-                        <img class="img-fluid bg-light p-2 mx-auto mb-3" src="img/testimonial-1.jpg"
-                            style="width: 90px; height: 90px;">
-                        <div class="testimonial-text text-center p-4">
-                            <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed.
-                                Magna
-                                ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo
-                                sea
-                                clita.</p>
-                            <h5 class="mb-1">Client Name</h5>
-                        </div>
-                    </div>
-                    <div class="testimonial-item text-center">
-                        <img class="img-fluid bg-light p-2 mx-auto mb-3" src="img/testimonial-2.jpg"
-                            style="width: 90px; height: 90px;">
-                        <div class="testimonial-text text-center p-4">
-                            <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed.
-                                Magna
-                                ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo
-                                sea
-                                clita.</p>
-                            <h5 class="mb-1">Client Name</h5>
-                            <span class="fst-italic">Profession</span>
-                        </div>
-                    </div>
-                    <div class="testimonial-item text-center">
-                        <img class="img-fluid bg-light p-2 mx-auto mb-3" src="img/testimonial-3.jpg"
-                            style="width: 90px; height: 90px;">
-                        <div class="testimonial-text text-center p-4">
-                            <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed.
-                                Magna
-                                ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo
-                                sea
-                                clita.</p>
-                            <h5 class="mb-1">Client Name</h5>
-                            <span class="fst-italic">Profession</span>
+                            <form>
+                                <div class="row g-3">
+                                    <div class="col-6 col-sm-6">
+                                        <input type="text" class="form-control border-0" placeholder="Your Name"
+                                            style="height: 55px;">
+                                    </div>
+                                    <div class="col-6 col-sm-6">
+                                        <input type="email" class="form-control border-0" placeholder="Your Email"
+                                            style="height: 55px;">
+                                    </div>
+                                    <div class="col-md-12 col-sm-6">
+                                        <input type="text" class="form-control border-0" placeholder="subject"
+                                            style="height: 55px;">
+                                    </div>
+                                    <div class="col-12">
+                                        <textarea class="form-control border-0" rows="5"
+                                            placeholder="message"></textarea>
+                                    </div>
+                                    <div class="col-12">
+                                        <button class="btn btn-primary w-100 py-3" type="submit">Submit</button>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- Testimonial End -->
-        <%- include('includes/footer') %>
+            <!-- Quote End -->
+            <%- include('includes/footer') %>
