--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -334,22 +334,22 @@
                                     <h1 class="display-5 mb-4">Contact Us</h1>
                                 </div>
                             </div>
-                            <form>
+                            <form action="/send-mail" method="post">
                                 <div class="row g-3">
                                     <div class="col-6 col-sm-6">
-                                        <input type="text" class="form-control border-0" placeholder="Your Name"
-                                            style="height: 55px;">
+                                        <input type="text" class="form-control border-0" name="name"
+                                            placeholder="Your Name" style="height: 55px;">
                                     </div>
                                     <div class="col-6 col-sm-6">
-                                        <input type="email" class="form-control border-0" placeholder="Your Email"
-                                            style="height: 55px;">
+                                        <input type="email" class="form-control border-0" name="email"
+                                            placeholder="Your Email" style="height: 55px;">
                                     </div>
                                     <div class="col-md-12 col-sm-6">
-                                        <input type="text" class="form-control border-0" placeholder="subject"
-                                            style="height: 55px;">
+                                        <input type="text" class="form-control border-0" name="subject"
+                                            placeholder="subject" style="height: 55px;">
                                     </div>
                                     <div class="col-12">
-                                        <textarea class="form-control border-0" rows="5"
+                                        <textarea class="form-control border-0" rows="5" name="msg"
                                             placeholder="message"></textarea>
                                     </div>
                                     <div class="col-12">
