--- a/views/main/contact.ejs
+++ b/views/main/contact.ejs
@@ -59,7 +59,7 @@
                                                 placeholder="message"></textarea>
                                         </div>
                                         <div class="col-12">
-                                            <button class="btn btn-primary w-100 py-3" type="submit">Submit</button>
+                                            <button class="btn btn-primary w-100 py-3" type="button">Submit</button>
                                         </div>
                                     </div>
                                 </form>
