--- a/views/admin/includes/slider.ejs
+++ b/views/admin/includes/slider.ejs
@@ -11,9 +11,9 @@
                 </div>
                 <div class="mb-3">
                     <label for="titletwow" class="form-label">caption</label>
-                    <input type="text" name="descEn" class="form-control" placeholder="caption">
+                    <input type="text" name="captionEn" class="form-control" placeholder="caption">
                     <label for="titletwow" class="form-label">الوصف</label>
-                    <input type="text" name="descAr" class="form-control" placeholder="الوصف">
+                    <input type="text" name="captionAr" class="form-control" placeholder="الوصف">
                 </div>
                 <div class="mb-3">
                     <input type="file" name="img" class="form-control">
