--- a/views/main-ar/includes/header.ejs
+++ b/views/main-ar/includes/header.ejs
@@ -33,7 +33,7 @@
     <a href="/" class="navbar-brand logo-large d-flex align-items-center px-4 px-lg-5">
         <h2 class="m-0 text-primary"><img src="/main/img/logo.png" alt="wood"></h2>
     </a>
-    <a href="/index" class="navbar-brand logo-small">
+    <a href="/" class="navbar-brand logo-small">
         <img src="/main/img/logo.png" alt="wood">
     </a>
     <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -41,11 +41,11 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
-            <a href="/" class="nav-item nav-link active">Home</a>
-            <a href="/about" class="nav-item nav-link">About</a>
-            <a href="/service" class="nav-item nav-link">Service</a>
-            <a href="/project" class="nav-item nav-link">Project</a>
-            <a href="/contact" class="nav-item nav-link">Contact</a>
+            <a href="/" class="nav-item nav-link active">الرئيسية</a>
+            <a href="/about" class="nav-item nav-link">من نحن</a>
+            <a href="/service" class="nav-item nav-link">خدماتنا</a>
+            <a href="/project" class="nav-item nav-link">مشاريعنا</a>
+            <a href="/contact" class="nav-item nav-link">اتصل بنا</a>
         </div>
     </div>
 </nav>
@@ -58,7 +58,7 @@
         </h1>
         <nav aria-label="breadcrumb animated slideInDown">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a class="text-white" href="/">Home</a></li>
+                <li class="breadcrumb-item"><a class="text-white" href="/">الرئيسية</a></li>
                 <li class="breadcrumb-item text-white active" aria-current="page">
                     <%=page%>
                 </li>
