--- a/views/main-ar/about.ejs
+++ b/views/main-ar/about.ejs
@@ -100,7 +100,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a href="/main/wood-profile.pdf" class="btn btn-primary py-3 px-5">المزيد</a>
+                                <a href="/main/wood-profile.pdf" class="btn btn-primary py-3 px-5">تحميل بروفايل
+                                    الشركة</a>
                             </div>
                         </div>
                     </div>
