--- a/views/main-en/about.ejs
+++ b/views/main-en/about.ejs
@@ -100,7 +100,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a href="/main/wood-profile.pdf" class="btn btn-primary py-3 px-5">Explore More</a>
+                                <a href="/main/wood-profile.pdf" class="btn btn-primary py-3 px-5">Download Company
+                                    Profile</a>
                             </div>
                         </div>
                     </div>
