--- a/views/main-ar/includes/header.ejs
+++ b/views/main-ar/includes/header.ejs
@@ -41,7 +41,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
-            <a href="/" class="nav-item nav-link active">الرئيسية</a>
+            <a href="/" class="nav-item nav-link">الرئيسية</a>
             <a href="/about" class="nav-item nav-link">من نحن</a>
             <a href="/service" class="nav-item nav-link">خدماتنا</a>
             <a href="/project" class="nav-item nav-link">مشاريعنا</a>
