--- a/views/main-ar/index.ejs
+++ b/views/main-ar/index.ejs
@@ -49,7 +49,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
-                    <a href="/" class="nav-item nav-link active">الرئيسية</a>
+                    <a href="/" class="nav-item nav-link">الرئيسية</a>
                     <a href="/about" class="nav-item nav-link">من نحن</a>
                     <a href="/service" class="nav-item nav-link">خدماتنا</a>
                     <a href="/project" class="nav-item nav-link">مشاريعنا</a>
@@ -102,7 +102,7 @@
                                 <h1 class="display-5 mb-4">من نحن</h1>
                             </div>
                             <p class="mb-4 pb-2">
-                                <%= about.ar%>
+                                ... <%= about.ar.slice(0,200)%>
                             </p>
                             <div class="row g-4 mb-4 pb-2">
                                 <div class="col-sm-6 wow fadeIn" data-wow-delay="0.1s">
@@ -134,7 +134,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="/main/wood-profile.pdf" class="btn btn-primary py-3 px-5">المزيد</a>
+                            <a href="/main/wood-profile.pdf" class="btn btn-primary py-3 px-5">تحميل بروفايل الشركة</a>
+                            <a href="/about" class="btn btn-primary py-3 px-5">المزيد</a>
                         </div>
                     </div>
                 </div>
