--- a/views/main-en/index.ejs
+++ b/views/main-en/index.ejs
@@ -66,8 +66,7 @@
                 <% slides.forEach(s=> { %>
                     <div class="owl-carousel-item position-relative">
                         <img class="img-fluid" src="<%=s.img%>" alt="">
-                        <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center"
-                            style="background: rgba(53, 53, 53, .7);">
+                        <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center">
                             <div class="container">
                                 <div class="row justify-content-center">
                                     <div class="col-12 col-lg-8 text-center">
