--- a/views/admin/includes/side-bar.ejs
+++ b/views/admin/includes/side-bar.ejs
@@ -25,8 +25,8 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link align-middle px-0" onclick="showElement('serv')">
-                    <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">services</span>
+                <a class="nav-link align-middle px-0" onclick="showElement('projects')">
+                    <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">projects</span>
                 </a>
             </li>
             <!-- <li class="nav-item">
