--- a/public/admin/css/admin.css
+++ b/public/admin/css/admin.css
@@ -99,3 +99,18 @@ Set the font-family content used for the HTML content.
         margin-right: 85% !important;
     }
 }
+
+.ql-snow .ql-picker.ql-size .ql-picker-item[data-value="14px"]::before {
+    content: 'Normal';
+    font-size: 14px !important;
+}
+
+.ql-snow .ql-picker.ql-size .ql-picker-item[data-value="16px"]::before {
+    content: 'Large';
+    font-size: 16px !important;
+}
+
+.ql-snow .ql-picker.ql-size .ql-picker-item[data-value="18px"]::before {
+    content: 'Huge';
+    font-size: 18px !important;
+}
