--- a/views/main-ar/includes/header.ejs
+++ b/views/main-ar/includes/header.ejs
@@ -40,7 +40,7 @@
         <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
-        <div class="navbar-nav ms-auto p-4 p-lg-0">
+        <div class="navbar-nav ms-auto p-4 p-lg-0" dir="rtl">
             <a href="/" class="nav-item nav-link">الرئيسية</a>
             <a href="/about" class="nav-item nav-link">من نحن</a>
             <a href="/service" class="nav-item nav-link">خدماتنا</a>
