--- a/views/main-ar/project.ejs
+++ b/views/main-ar/project.ejs
@@ -39,7 +39,7 @@
                                                 <%=p.name.ar%>
                                             </p>
                                             <h5 class="lh-base mb-0">
-                                                <%=p.desc.ar%></a>
+                                                <%-p.desc.ar%></a>
                                         </div>
                                     </div>
                                 </div>
