--- a/views/main-en/index.ejs
+++ b/views/main-en/index.ejs
@@ -96,7 +96,7 @@
                                 <h1 class="display-5 mb-4">About Us</h1>
                             </div>
                             <p class="mb-4 pb-2">
-                                <%= about.en.slice(0,200)%>...
+                                <%- about.en.slice(0,200)%>...
                             </p>
                             <div class="row g-4 mb-4 pb-2">
                                 <div class="col-sm-6 wow fadeIn" data-wow-delay="0.1s">
@@ -155,10 +155,10 @@
                                     </div>
                                     <div class="p-4 text-center border border-5 border-light border-top-0">
                                         <h4 class="mb-3">
-                                            <%=s.title.en%>
+                                            <%-s.title.en%>
                                         </h4>
                                         <p>
-                                            <%=s.content.en%>
+                                            <%-s.content.en%>
                                         </p>
                                     </div>
                                 </div>
@@ -259,7 +259,7 @@
                             <li class="mx-2 active" data-filter="*">All</li>
                             <% categs.forEach(c=>{ %>
                                 <li class="mx-2" data-filter=".<%=c.en.replace(/ /g, "")%>">
-                                    <%= c.en%>
+                                    <%- c.en%>
                                 </li>
                                 <%}) %>
                         </ul>
@@ -281,10 +281,10 @@
                                 </div>
                                 <div class="border border-5 border-light border-top-0 p-4">
                                     <p class="text-primary fw-medium mb-2">
-                                        <%=p.name.en%>
+                                        <%-p.name.en%>
                                     </p>
                                     <h5 class="lh-base mb-0">
-                                        <%=p.desc.en%></a>
+                                        <%-p.desc.en%></a>
                                 </div>
                             </div>
                         </div>
