--- a/views/main-en/project.ejs
+++ b/views/main-en/project.ejs
@@ -39,7 +39,7 @@
                                                 <%=p.name.en%>
                                             </p>
                                             <h5 class="lh-base mb-0">
-                                                <%=p.desc.en%></a>
+                                                <%-p.desc.en%></a>
                                         </div>
                                     </div>
                                 </div>
