--- a/views/admin/includes/about.ejs
+++ b/views/admin/includes/about.ejs
@@ -1,13 +1,23 @@
 <div class="col-6 d-none all-forms" id="about">
-    <form action="/admin/about" method="post" enctype="multipart/form-data">
+    <form action="/admin/about" method="post" enctype="multipart/form-data" id="aboutForm">
         <h4>about wood</h4>
         <div class="mb-3">
             <label for="txt">content</label>
-            <textarea name="en" class="form-control" cols="30" rows="6"><% if(about){%><%=about.en%><%}%></textarea>
+            <div>
+                <textarea id="aboutinaEn">
+                    <%if(about){%><%=about.en%><%}%>
+                </textarea>
+            </div>
+            <input type="hidden" name="en" id="aboutEn">
         </div>
         <div class="mb-3">
             <label for="txt">المحتوى</label>
-            <textarea name="ar" class="form-control" cols="30" rows="6"><% if(about){%><%=about.ar%><%}%></textarea>
+            <div>
+                <textarea id="aboutinaAr">
+                    <%if(about){%><%=about.ar%><%}%>
+                </textarea>
+            </div>
+            <input type="hidden" name="ar" id="aboutAr">
         </div>
         <div class="mb-3" style="width: 50%;">
             <label for="">عدد العملاء</label>
@@ -21,6 +31,6 @@
             <label for="txt">الصورة</label>
             <input type="file" name="img" class="form-control">
         </div>
-        <button type="submit" class="btn btn-dark">submit</button>
+        <button type="button" class="btn btn-dark" onclick="submitabout()">submit</button>
     </form>
 </div>
