--- a/views/main-ar/about.ejs
+++ b/views/main-ar/about.ejs
@@ -68,7 +68,7 @@
                                     <h1 class="display-5 mb-4">من نحن</h1>
                                 </div>
                                 <p class="mb-4 pb-2">
-                                    <%= about.ar%>
+                                    <%- about.ar%>
                                 </p>
                                 <div class="row g-4 mb-4 pb-2">
                                     <div class="col-sm-6 wow fadeIn" data-wow-delay="0.1s">
