--- a/views/admin/includes/side-bar.ejs
+++ b/views/admin/includes/side-bar.ejs
@@ -29,6 +29,11 @@
                     <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">projects</span>
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link align-middle px-0" onclick="showElement('why')">
+                    <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">why us</span>
+                </a>
+            </li>
             <!-- <li class="nav-item">
                 <a class="nav-link align-middle px-0" onclick="showElement('faq')">
                     <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Frequently Asked Question</span>
