--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -31,6 +31,7 @@
                                 <%- include('includes/service') %>
                                     <%- include('includes/project') %>
                                         <%- include('includes/parten') %>
+                                            <%- include('includes/why-us') %>
                     </div>
                 </div>
         </div>
