--- a/views/main-en/index.ejs
+++ b/views/main-en/index.ejs
@@ -179,10 +179,7 @@
                             <div class="section-title text-start">
                                 <h1 class="display-5 mb-4">Why Choose Us</h1>
                             </div>
-                            <p class="mb-4 pb-2">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam
-                                amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo
-                                erat
-                                amet</p>
+                            <p class="mb-4 pb-2"><%- why.en%></p>
                             <div class="row g-4">
                                 <div class="col-6">
                                     <div class="d-flex align-items-center">
@@ -237,7 +234,7 @@
                     </div>
                     <div class="col-lg-6 pe-lg-0" style="min-height: 400px;">
                         <div class="position-relative h-100">
-                            <img class="position-absolute img-fluid w-100 h-100" src="/main/img/feature.jpg"
+                            <img class="position-absolute img-fluid w-100 h-100" src="<%= why.img%>"
                                 style="object-fit: cover;" alt="">
                         </div>
                     </div>
